# KettleController_ESPIDF

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main_rt_model.cpp
main/include/: blinkySystem.hpp  digitalOutput.hpp  discreteController.hpp  ds18b20probe.hpp
